--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "projet 1 MGL7361",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev:primary": "node primary/server.js",
+    "dev:spare": "node spare/server.js",
+    "dev:proxy": "node proxy/server.js",
+    "load": "node loadtest/spam.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +17,7 @@
   },
   "dependencies": {
     "cors": "^2.8.6",
-    "express": "^5.2.1"
+    "express": "^4.18.2",
+    "node-fetch": "^2.7.0"
   }
 }
